--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@ search_exclude: true
 image: images/logo.png
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+This is Jun Lim's Fastpages website for this trimester. My repository can be found [here](github.com/peacekeeper6/fastpages). 
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
+Here is also a picture of my face for reference. 
 
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
+![]({{site.baseurl}}/images/IMG_3566.JPG "https://github.com/fastai/fastpages")
 
-You can edit the `index.html` file to change this content.
+I will be providing documentation of my learning in CSA here.
 
 # Posts
