--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><p>This is Jun Lim’s Fastpages website for this trimester. My repository can be found <a href="github.com/peacekeeper6/fastpages">here</a>.</p>
 
-<p><img src="/fastpages/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
+<p>Here is also a picture of my face for reference.</p>
 
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
+<p><img src="/fastpages/images/IMG_3566.JPG" alt="" title="https://github.com/fastai/fastpages" /></p>
 
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
+<p>I will be providing documentation of my learning in CSA here.</p>
 
 <h1 id="posts">Posts</h1>
 
