--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ This is Jun Lim's Fastpages website for this trimester. My repository can be fou
 
 Here is also a picture of my face for reference. 
 
+<img src=/images/IMG_3566.JPG>
+
 ![]({{site.baseurl}}/images/IMG_3566.JPG "https://github.com/fastai/fastpages")
 
 I will be providing documentation of my learning in CSA here.
