deploy: 08d594d247fe8ec70e4960fef23e8c7f084df9d0

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@ window.onload = wrap_img;
 
 <p>Here is also a picture of my face for reference.</p>
 
+<p>&lt;img src=/images/IMG_3566.JPG&gt;</p>
+
 <p><img src="/fastpages/images/IMG_3566.JPG" alt="" title="https://github.com/fastai/fastpages" /></p>
 
 <p>I will be providing documentation of my learning in CSA here.</p>
