--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@ image: images/logo.png
 
 This is Jun Lim's Fastpages website for this trimester. My repository can be found [here](github.com/peacekeeper6/fastpages). 
 
-Here is also a picture of my face for reference. 
-
-<img src=/images/IMG_3566.JPG>
-
-![]({{site.baseurl}}/images/IMG_3566.JPG "https://github.com/fastai/fastpages")
-
-I will be providing documentation of my learning in CSA here.
+I will be providing documentation of my learning in CSA here. Expect to see much more personalization as I go through the learning process. 
 
 # Posts
