--- a/index.html
+++ b/index.html
@@ -73,13 +73,7 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><p>This is Jun Lim’s Fastpages website for this trimester. My repository can be found <a href="github.com/peacekeeper6/fastpages">here</a>.</p>
 
-<p>Here is also a picture of my face for reference.</p>
-
-<p>&lt;img src=/images/IMG_3566.JPG&gt;</p>
-
-<p><img src="/fastpages/images/IMG_3566.JPG" alt="" title="https://github.com/fastai/fastpages" /></p>
-
-<p>I will be providing documentation of my learning in CSA here.</p>
+<p>I will be providing documentation of my learning in CSA here. Expect to see much more personalization as I go through the learning process.</p>
 
 <h1 id="posts">Posts</h1>
 
