--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><p>This is Jun Lim’s Fastpages website for this trimester. My repository can be found <a href="github.com/peacekeeper6/fastpages">here</a>.</p>
 
+<p>My deployed spring portfolio can be found here: https://csajun.ml/</p>
+
 <p>I will be providing documentation of my learning in CSA here. Expect to see much more personalization as I go through the learning process.</p>
 
 <h1 id="posts">Posts</h1>
